@@ -1,3 +1,8 @@
+2000-10-10  Tom Rix <trix@redhat.com>
+
+	* section.c (bfd_make_section_anyway): Release newsect ptr when 
+	newsect->symbol fails to alloc.  Use bfd_release instead of free.
+
 2000-10-09  Richard Henderson  <rth@cygnus.com
 
 	* elf64-ia64.c (elf64_ia64_unwind_entry_compare_bfd): New.
